--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ h1 {
     background-color: orange;
     font-size: 30px;
     padding: 10px;
-    width: 20%;
+    width: 250px;
     margin-top: 10px;
 }
 
@@ -21,7 +21,7 @@ div {
 #instruction {
     background-color: #EFEA7C;
     color: green;
-    width: 50%;
+    width: 400px;
     padding: 10px;
 }
 .output1 {
